--- a/views/folios.html
+++ b/views/folios.html
@@ -42,6 +42,7 @@
   <a class="folioLink" href="  https://www.almond.studio/" target="_blank">Studio Almond</a> 
 <a class="folioLink" href="https://karalevich.com" target="_blank">Maksim Karalevich</a> 
 <a class="folioLink" href="https://twnsnd.co" target="_blank">Cole Townsend</a> 
+  <a class="folioLink" href="https://www.jingdezign.com/" target="_blank">Wenjing Liu</a> 
 <a class="folioLink" href="https://liebermannkiepe.de/en" target="_blank"> Liebermann Kiepe Reddemann</a> 
 <a class="folioLink" href="https://christianmezofi.com/" target="_blank">Christian Mezöfi</a> 
 <a class="folioLink" href="https://www.angel-estrada.com/" target="_blank">Angel Estrada</a> 
