--- a/views/folios.html
+++ b/views/folios.html
@@ -10,7 +10,7 @@
 </head>   
 
   
-<a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 14.06.20</a>   
+<a class="updatedOn">Updated 14.06.20</a>   
 <span id="folioLinks">
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a> 
 <a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a> 
@@ -77,7 +77,7 @@
 <a class="folioLink" href="https://thomaswilliams.co/" target="_blank">Thomas Williams</a> 
 <a class="folioLink" href="https://simon.abranowicz.com/" target="_blank">Simon Abranowicz</a> 
 <a class="folioLink" href="https://maximerimbert.fyi/" target="_blank">Maxime Rimbert</a> 
-     </span>
+     </span> <a class="updatedOn">Made by @kimw</a>  
   <script>
 $('a.folioLink').hover(function(){
  $('a.folioLink').not(this).toggleClass('toggle');
