--- a/views/folios.html
+++ b/views/folios.html
@@ -77,7 +77,7 @@
 <a class="folioLink" href="https://thomaswilliams.co/" target="_blank">Thomas Williams</a> 
 <a class="folioLink" href="https://simon.abranowicz.com/" target="_blank">Simon Abranowicz</a> 
 <a class="folioLink" href="https://maximerimbert.fyi/" target="_blank">Maxime Rimbert</a> 
-     </span> <a class="updatedOn">Made by @kimw</a>  
+     </span> <a class="updatedOn" href="https://twitter.com/kimw" target="_blank">Made by @kimw</a>  
   <script>
 $('a.folioLink').hover(function(){
  $('a.folioLink').not(this).toggleClass('toggle');
