--- a/style.css
+++ b/style.css
@@ -140,8 +140,11 @@ body.light-mode {
   font-size: 2rem;
   line-height: 1.5;
   display: flex;
-  align-items: center;
-  justify-content: center;
+display: -webkit-flex;
+justify-content: center;
+-webkit-justify-content: center;
+align-items: center;
+-webkit-align-items: center;
   margin: 0;
   min-height: 100vh;
 overflow: hidden;
@@ -261,7 +264,7 @@ body.dark-mode {
   body.dark-mode {
     font-size: 1.3rem;
   }
-  #getportfolio{margin-top: -25%;}
+  
   #nav {
  
   overflow-y: scroll;
