--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ justify-content: center;
 -webkit-justify-content: center;
 align-items: center;
 -webkit-align-items: center;
+  -webkit-box-orient: horizontal;
   margin: 0;
   min-height: 100vh;
 overflow: hidden;
