--- a/views/folios.html
+++ b/views/folios.html
@@ -14,6 +14,7 @@
 <span id="folioLinks">
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a> 
 <a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a> 
+  <a class="folioLink" href="https://karolgadzala.de/" target="_blank">Karol Gadzala</a> 
 <a class="folioLink" href="http://www.timothyachumba.com/" target="_blank">Timothy Achumba</a> 
   <a class="folioLink" href="https://day-and.co/" target="_blank">Dayan D’Aniello</a> 
 <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a> 
@@ -63,6 +64,9 @@
 <a class="folioLink" href="http://www.colinkeany.com" target="_blank">Colin Keany</a> 
 <a class="folioLink" href="https://soulwire.co.uk/" target="_blank">Justin Windle</a> 
 <a class="folioLink" href="https://taragraphy.com/" target="_blank">Artëm Tarasov</a> 
+  <a class="folioLink" href="https://dow-smith.com/" target="_blank">Jake Dow-Smith</a> 
+  <a class="folioLink" href="https://lukashaider.com/" target="_blank">Lukas Haider</a> 
+  <a class="folioLink" href="https://ianwillia.ms/" target="_blank">Ian Williams</a> 
 <a class="folioLink" href="http://rumz.org/" target="_blank">Rumsey Taylor</a> 
 <a class="folioLink" href="https://jeanlou.co/" target="_blank">Jean-Lou Renoux</a> 
 <a class="folioLink" href="https://jonasf.work/" target="_blank">Jonas Folletête</a> 
