--- a/views/folios.html
+++ b/views/folios.html
@@ -51,6 +51,7 @@
 <a class="folioLink" href="https://justified.studio/" target="_blank">Justified Studio</a> 
 <a class="folioLink" href="http://davidpolonia.com/" target="_blank">David Polonia</a> 
 <a class="folioLink" href="http://nathanyoung.org/" target="_blank">Nathan Young</a> 
+    <a class="folioLink" href="https://darrendominiquedavis.com/" target="_blank">Darren Dominique</a> 
 <a class="folioLink" href="https://victor.work/" target="_blank">Victor Costa</a> 
 <a class="folioLink" href="https://niklasrosen.se/" target="_blank">Niklas Rosén</a> 
 <a class="folioLink" href="http://matthieuteyssandier.com/" target="_blank">Matthieu Teyssandier</a> 
