--- a/views/folios.html
+++ b/views/folios.html
@@ -82,8 +82,8 @@
 <a class="folioLink" href="https://thomaswilliams.co/" target="_blank">Thomas Williams</a> 
 <a class="folioLink" href="https://simon.abranowicz.com/" target="_blank">Simon Abranowicz</a> 
 <a class="folioLink" href="https://maximerimbert.fyi/" target="_blank">Maxime Rimbert</a> 
-     </span> <a class="updatedOn" href="https://twitter.com/kimw" target="_blank">Made by @kimw</a>  Also See
-<a class="updatedOn" href="https://blackswho.design/" target="_blank">Blacks Who Design</a> and <a class="updatedOn" href="https://womenwho.design/" target="_blank">Women Who Design</a>  
+     </span> <br><br><span class="siteCredits"><a class="creditLink" href="https://twitter.com/kimw" target="_blank">Made by @kimw</a>  Also See
+<a class="creditLink" href="https://blackswho.design/" target="_blank">Blacks Who Design</a> and <a class="creditLink" href="https://womenwho.design/" target="_blank">Women Who Design</a>.</span>  
   <script>
 $('a.folioLink').hover(function(){
  $('a.folioLink').not(this).toggleClass('toggle');
