--- a/style.css
+++ b/style.css
@@ -1,5 +1,30 @@
 .siteCredits {color:black;}
 
+a.creditLink { color: black;
+    border: 0px;
+    background: none;
+ padding:0px;
+  text-decoration: none;
+transition: all 0.5s ease; }
+
+a.creditLink:hover {
+  text-decoration: underline;transition: all 0.5s ease; }
+
+a {
+    color: black;
+    border: 5px outset white;
+    background: #eee;
+ padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 14px;
+    padding-top: 14px;
+    text-decoration: none;transition: background 0.5s ease;
+}
+a:hover {
+    background: #e6e3e3;transition: background 0.5s ease;
+}
+
+
 
 .dev-hidden {display:none!important;}
 
