--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.siteCredits {color:black;}
+.siteCredits {color:black;padding-bottom:0px;}
 
 a.creditLink { color: black;
     border: 0px;
@@ -276,6 +276,8 @@ body.dark-mode {
 
 
 @media all and (max-width: 740px) {
+    
+    .siteCredits {padding-bottom: 100px;}
   
     #getportfolio{margin-top: -35%;}
   
