--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.siteCredits {color:gray;padding-bottom:0px;}
+.siteCredits {color:lightslategray;padding-bottom:0px;}
 
 a.creditLink { color: black;
     border: 0px;
