--- a/views/folios.html
+++ b/views/folios.html
@@ -10,8 +10,9 @@
 </head>   
 
   
-<a class="updatedOn">Updated 14.06.20</a>   
+<a class="updatedOn">Updated 18.06.20</a>   
 <span id="folioLinks">
+  <a class="folioLink" href="http://williamrichardson.co.uk/" target="_blank">William Richardson</a> 
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a> 
 <a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a> 
   <a class="folioLink" href="https://karolgadzala.de/" target="_blank">Karol Gadzala</a> 
