--- a/views/folios.html
+++ b/views/folios.html
@@ -85,7 +85,7 @@
 <a class="folioLink" href="https://simon.abranowicz.com/" target="_blank">Simon Abranowicz</a> 
 <a class="folioLink" href="https://maximerimbert.fyi/" target="_blank">Maxime Rimbert</a> 
      </span> <br><br><span class="siteCredits">Also see
-<a class="creditLink" href="https://blackswho.design/" target="_blank">Blacks Who Design</a> and <a class="creditLink" href="https://womenwho.design/" target="_blank">Women Who Design</a>. Made by <a class="creditLink" href="https://twitter.com/kimw" target="_blank">@kimw</a>.</span>  
+<a class="creditLink" href="https://blackswho.design/" target="_blank">Blacks Who Design</a>, <a class="creditLink" href="https://womenwho.design/" target="_blank">Women Who Design</a>, and <a class="creditLink" href="https://www.latinxswhodesign.com/" target="_blank">Latinxs Who Design</a>. Made by <a class="creditLink" href="https://twitter.com/kimw" target="_blank">@kimw</a>.</span>  
   <script>
 $('a.folioLink').hover(function(){
  $('a.folioLink').not(this).toggleClass('toggle');
