--- a/views/folios.html
+++ b/views/folios.html
@@ -12,7 +12,7 @@
   
 <a class="updatedOn">Updated 18.06.20</a>   
 <span id="folioLinks">
-     <a class="folioLink" "http://work.jsoat.us/" target="_blank">John Soa</a> 
+     <a class="folioLink" href="http://work.jsoat.us/" target="_blank">John Soa</a> 
    <a class="folioLink" href="https://www.bryntaylor.co.uk/" target="_blank">Bryn Taylor</a> 
   <a class="folioLink" href="http://williamrichardson.co.uk/" target="_blank">William Richardson</a> 
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a> 
