--- a/views/folios.html
+++ b/views/folios.html
@@ -10,8 +10,9 @@
 </head>   
 
   
-<a class="updatedOn">Updated 19.06.20</a>   
+<a class="updatedOn">Updated 20.06.20</a>   
 <span id="folioLinks">
+  <a class="folioLink" href="https://nunocoelhosantos.com/" target="_blank">Nuno Coelho Santos</a> 
   <a class="folioLink" href="https://pasquale.cool/" target="_blank">Pasquale Gideon D'Silva</a> 
      <a class="folioLink" href="http://work.jsoat.us/" target="_blank">John Soa</a> 
    <a class="folioLink" href="https://www.bryntaylor.co.uk/" target="_blank">Bryn Taylor</a> 
