--- a/views/folios.html
+++ b/views/folios.html
@@ -2,13 +2,14 @@
 <html lang ="en">
 <head>
 <meta charset="UTF-8">
-<title>Portfolios</title>
-<link rel="stylesheet" type="text/css" href="../style.css">
-<script src="../js/folios.js"></script>
-<script src="../js/colours.js"></script>
+<title>Tips</title>
+<link rel="stylesheet" type="text/css" href="http://niceportfol.io/style.css">
+<script src="http://niceportfol.io/js/folios.js"></script>
+<script src="http://niceportfol.io/js/colours.js"></script>
 
 </head>   
 
+  
   
 <a class="updatedOn">Updated 20.06.20</a>   
 <span id="folioLinks">
@@ -88,7 +89,7 @@
 <a class="folioLink" href="https://simon.abranowicz.com/" target="_blank">Simon Abranowicz</a> 
 <a class="folioLink" href="https://maximerimbert.fyi/" target="_blank">Maxime Rimbert</a> 
      </span> <br><br><span class="siteCredits">Also see
-<a class="creditLink" href="https://blackswho.design/" target="_blank">Blacks Who Design</a>, <a class="creditLink" href="https://womenwho.design/" target="_blank">Women Who Design</a>, and <a class="creditLink" href="https://www.latinxswhodesign.com/" target="_blank">Latinxs Who Design</a>. Made by <a class="creditLink" href="https://twitter.com/kimw" target="_blank">@kimw</a>.</span>  
+<a class="creditLink" href="https://blackswho.design/" target="_blank">Blacks Who Design</a>, <a class="creditLink" href="https://womenwho.design/" target="_blank">Women Who Design</a>, and <a class="creditLink" href="https://www.latinxswhodesign.com/" target="_blank">Latinxs Who Design</a>.</span>  
   <script>
 $('a.folioLink').hover(function(){
  $('a.folioLink').not(this).toggleClass('toggle');
