--- a/views/tips.html
+++ b/views/tips.html
@@ -15,40 +15,40 @@
 
 <div class="hide">
  <div id="folioTip1" class="folioTip">
-    I love a portfolio that gets to the dang point already. A great portfolio doesn’t ask much from its viewer. It’s just like “Hey. Check out all these cool things my maker has made. If you’re looking for similar things to be made, then you’ve come to the right place. <a class="folioLink" href="http://lindaeliasen.com/" target="_blank">Linda Eliasen</a> 
+    I love a portfolio that gets to the dang point already. A great portfolio doesn’t ask much from its viewer. It’s just like “Hey. Check out all these cool things my maker has made. If you’re looking for similar things to be made, then you’ve come to the right place. <br><a class="folioLink" href="http://lindaeliasen.com/" target="_blank">Linda Eliasen</a> 
  </div>
  <div id="folioTip2" class="folioTip">
-    Portfolios are so hard to design because they must satisfy three very different audiences: potential clients, other designers, and, hardest of all, yourself! So the best portfolios manage to be informative and convincing for clients, forward-thinking and original for other designers, yet at the same time also be personal and a reflection of yourself. <a class="folioLink" href="https://sachagreif.com/" target="_blank">Sacha Greif</a> 
+    Portfolios are so hard to design because they must satisfy three very different audiences: potential clients, other designers, and, hardest of all, yourself! So the best portfolios manage to be informative and convincing for clients, forward-thinking and original for other designers, yet at the same time also be personal and a reflection of yourself. <br><a class="folioLink" href="https://sachagreif.com/" target="_blank">Sacha Greif</a> 
  </div>
  <div id="folioTip3" class="folioTip">
-    A nice portfolio has personality. It should give a hint of what it would be like to work with the designer. A nice portfolio has limited scope. It doesn’t show every single project you’ve worked on, just the really good ones. A nice portfolio gives credit. It tells you what role the designer had in the project, how they fit into the team and who else was on the team. A nice portfolio is informative. It explains why you did the things you did. A nice portfolio is nice. <a class="folioLink" href="https://ueno.co/" target="_blank">Haraldur Thorleifsson</a> 
+    A nice portfolio has personality. It should give a hint of what it would be like to work with the designer. A nice portfolio has limited scope. It doesn’t show every single project you’ve worked on, just the really good ones. A nice portfolio gives credit. It tells you what role the designer had in the project, how they fit into the team and who else was on the team. A nice portfolio is informative. It explains why you did the things you did. A nice portfolio is nice. <br><a class="folioLink" href="https://ueno.co/" target="_blank">Haraldur Thorleifsson</a> 
  </div>
  <div id="folioTip4" class="folioTip">
-    A quality that I like to see in a portfolio is timelessness. When designing my portfolio, I like to imagine myself 5 years down the line viewing this portfolio again. How can I make the style and the content remain relevant 5 years later? Approaching it this way reduces my visual language to the bones and grows the project details into a full story. <a class="folioLink" href="https://nunocoelhosantos.com/" target="_blank">Nuno Coelho Santos</a> 
+    A quality that I like to see in a portfolio is timelessness. When designing my portfolio, I like to imagine myself 5 years down the line viewing this portfolio again. How can I make the style and the content remain relevant 5 years later? Approaching it this way reduces my visual language to the bones and grows the project details into a full story. <br><a class="folioLink" href="https://nunocoelhosantos.com/" target="_blank">Nuno Coelho Santos</a> 
  </div>
  <div id="folioTip5" class="folioTip">
-    Be considerate and balanced. Show the work that you are most proud of. Think of how you would be perceived and what you show (because you will get requests to do more of the same.) Kill your darlings. Don’t be afraid to leave some projects out, if it improves your overall quality. <a class="folioLink" href="http://sanscolour.com/" target="_blank">Joakim Jansson</a> 
+    Be considerate and balanced. Show the work that you are most proud of. Think of how you would be perceived and what you show (because you will get requests to do more of the same.) Kill your darlings. Don’t be afraid to leave some projects out, if it improves your overall quality. <br><a class="folioLink" href="http://sanscolour.com/" target="_blank">Joakim Jansson</a> 
  </div>
  <div id="folioTip6" class="folioTip">
-    A nice portfolio is a well edited one. Keep case studies to the point, yet think about each photograph as an image in its own right, transporting a value greater than its strictly informative qualities (i.e. showing off the work at hand). Often times, the case study is the only place where potential clients and peers will see the work, so invest the time needed to make the most of that exposure. <a class="folioLink" href="https://www.lundgrenlindqvist.se/" target="_blank">Lundgren+Lindqvist</a> 
+    A nice portfolio is a well edited one. Keep case studies to the point, yet think about each photograph as an image in its own right, transporting a value greater than its strictly informative qualities (i.e. showing off the work at hand). Often times, the case study is the only place where potential clients and peers will see the work, so invest the time needed to make the most of that exposure. <br><a class="folioLink" href="https://www.lundgrenlindqvist.se/" target="_blank">Lundgren+Lindqvist</a> 
  </div>
  <div id="folioTip7" class="folioTip">
-    A good portfolio shouldn’t have “filler work”. Nothing’s as disappointing than a couple of great projects watered down by the seven bad ones that are on there just to display quantity. <a class="folioLink" href="https://www.lottanieminen.com/" target="_blank">Lotta Nieminen</a> 
+    A good portfolio shouldn’t have “filler work”. Nothing’s as disappointing than a couple of great projects watered down by the seven bad ones that are on there just to display quantity. <br><a class="folioLink" href="https://www.lottanieminen.com/" target="_blank">Lotta Nieminen</a> 
  </div>
  <div id="folioTip8" class="folioTip">
-    Ultimately creating a nice portfolio requires the same level of craft and ideas we apply to our projects, to documenting the work. A compelling story requires not only a great plot, but must too be reflected in a great delivery. <a class="folioLink" href="https://koto.studio/" target="_blank">Jowey Roden</a> 
+    Ultimately creating a nice portfolio requires the same level of craft and ideas we apply to our projects, to documenting the work. A compelling story requires not only a great plot, but must too be reflected in a great delivery. <br><a class="folioLink" href="https://koto.studio/" target="_blank">Jowey Roden</a> 
  </div>
 
  <div id="folioTip9" class="folioTip">
-    How to make a portfolio effective depends on the designer’s area of expertise and their goals. I think a strong portfolio is about editing down your work to what you think best reflects your strengths. And also being sure to mirror more of the kind of work you want to do. In this regard, it’s as much about editing down your projects to a considered, select few as it is about making that work sing and come to life. <a class="folioLink" href="https://www.futurefabric.co/" target="_blank">Guy Moorhouse</a> 
+    How to make a portfolio effective depends on the designer’s area of expertise and their goals. I think a strong portfolio is about editing down your work to what you think best reflects your strengths. And also being sure to mirror more of the kind of work you want to do. In this regard, it’s as much about editing down your projects to a considered, select few as it is about making that work sing and come to life. <br><a class="folioLink" href="https://www.futurefabric.co/" target="_blank">Guy Moorhouse</a> 
  </div>
 
   <div id="folioTip10" class="folioTip">
-    The most valuable thing about a portfolio for me is that it conveys the identity of the person behind it. I see so many different portfolios each day, but the ones I remember are always the ones that had something special about them. Be it specific interactions, copy or just the general style, the possibilities to make it unique are truly endless. A grid of thumbnails just doesn’t cut it anymore. <a class="folioLink" href="http://rigerl.com/" target="_blank">Joris Rigerl</a> 
+    The most valuable thing about a portfolio for me is that it conveys the identity of the person behind it. I see so many different portfolios each day, but the ones I remember are always the ones that had something special about them. Be it specific interactions, copy or just the general style, the possibilities to make it unique are truly endless. A grid of thumbnails just doesn’t cut it anymore. <br><a class="folioLink" href="http://rigerl.com/" target="_blank">Joris Rigerl</a> 
  </div>
 
 <div id="last-tip">
-    Don’t be afraid to bring in your own personality and be creative about displaying your work, show the crowd that you and your work are unique! <a class="folioLink" href="https://verenamichelitsch.com/" target="_blank">Verena Michelitsch</a> 
+    Don’t be afraid to bring in your own personality and be creative about displaying your work, show the crowd that you and your work are unique! <br><a class="folioLink" href="https://verenamichelitsch.com/" target="_blank">Verena Michelitsch</a> 
 </div>
 </div>
 
