--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ a.generator:hover {
 a.fixTopRight {
   position: fixed;
   right: 0!important;
-  width: 65%;
+  width: fit-content;
   font-size:32px;
   color: darkkhaki;
     text-align:right;
