--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   height: 100%;
   width: 100%;
   display: flex;
-  color: black;
+  color: lightslategray;
    font-size: calc(1em + 1vw);
    line-height: 125%;
 }
