--- a/style.css
+++ b/style.css
@@ -687,3 +687,10 @@ a.links:hover{
     background-color:rgba(255, 255, 255, 0.9)
 }
 }
+
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    a.fixTopRight { width: 65%;}
+}
