--- a/style.css
+++ b/style.css
@@ -594,6 +594,9 @@ a.links:hover{
   }
 }
 @media all and (max-width: 740px) {
+    
+    
+    a#getportfolio {padding-top: 20px; padding-bottom: 20px; padding-right: 20px; padding-left: 20px;}
 
 
   .wrapInfo {
