--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ a.fixTopRight {
     text-decoration: underline;
     transition: color 0.5s ease;
      cursor: ne-resize;
+    padding-top:16px;
 }
 a.fixTopRight:hover {
   background: none;
