--- a/style.css
+++ b/style.css
@@ -415,16 +415,16 @@ a.folioLink:hover {
   visibility: hidden;
   // only needed when you use a transparent background for #nav
 }
-body {
-  -webkit-animation: fadein 0.6s;
+body {  animation-delay: 0.5s;
+  -webkit-animation: fadein 1s;
   /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 0.6s;
+  -moz-animation: fadein 1s;
   /* Firefox < 16 */
-  -ms-animation: fadein 0.6s;
+  -ms-animation: fadein 1s;
   /* Internet Explorer */
-  -o-animation: fadein 0.6s;
+  -o-animation: fadein 1s;
   /* Opera < 12.1 */
-  animation: fadein 0.6s;
+  animation: fadein 1s;
 }
 body.light-mode {
   font-family: 'Visuelt', Arial, "Helvetica Neue", Helvetica, "Lucida Grande", sans-serif;
