--- a/views/folios.html
+++ b/views/folios.html
@@ -11,8 +11,9 @@
 
   
   
-<a class="updatedOn">Updated 22.06.20</a>   
+<a class="updatedOn">Updated 23.06.20</a>   
 <span id="folioLinks">
+   <a class="folioLink" href="http://lebassis.com/" target="_blank">Leandro Assis</a> 
       <a class="folioLink" href="http://thisisnate.com/" target="_blank">Nate Moore</a> 
     <a class="folioLink" href="https://jergarcia.com/" target="_blank">Jeremy Garcia</a> 
   <a class="folioLink" href="https://nunocoelhosantos.com/" target="_blank">Nuno Coelho Santos</a> 
