--- a/views/tips.html
+++ b/views/tips.html
@@ -46,6 +46,10 @@
   <div id="folioTip10" class="folioTip">
     The most valuable thing about a portfolio for me is that it conveys the identity of the person behind it. I see so many different portfolios each day, but the ones I remember are always the ones that had something special about them. Be it specific interactions, copy or just the general style, the possibilities to make it unique are truly endless. A grid of thumbnails just doesn’t cut it anymore. <br><a class="folioLink" href="http://rigerl.com/" target="_blank">Joris Rigerl</a> 
  </div>
+ 
+   <div id="folioTip11" class="folioTip">
+    Don’t overthink it. You don’t always need a crazy bespoke and unique website to show your work. Sometimes a well structured and concise PDF can do just fine. Instead of coming up with crazy effects spend time thinking how to tell good stories about what problems you have solved, why and what were the outcomes. <br><a class="folioLink" href="https://twitter.com/oparenko" target="_blank">Yuriy Oparenko</a> 
+ </div>
 
 <div id="last-tip">
     Don’t be afraid to bring in your own personality and be creative about displaying your work, show the crowd that you and your work are unique! <br><a class="folioLink" href="https://verenamichelitsch.com/" target="_blank">Verena Michelitsch</a> 
