--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
     font-display: swap;
 }
 
+.spacebar {color:black; font-size:1em;}
+
 .wrapInfo {
   height: 100%;
   width: 100%;
@@ -15,6 +17,7 @@
    font-size: calc(1em + 1vw);
    line-height: 125%;
 }
+
 
 
 
