--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
     font-display: swap;
 }
 
-.spacebar {color:black; font-size:1em;}
+.spacebar {    font-size: 1em;
+    color: #e8e8e8;
+    margin-top: 58px;
+display:block;}
 
 .wrapInfo {
   height: 100%;
@@ -602,6 +605,7 @@ a.links:hover{
 }
 @media all and (max-width: 740px) {
     
+     .spacebar {display:none;}
     
     a#getportfolio {padding-top: 20px; padding-bottom: 20px; padding-right: 20px; padding-left: 20px;}
 
@@ -712,4 +716,5 @@ a.links:hover{
   and (max-height: 1366px) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
     a.fixTopRight { width: 72%;}
+      .spacebar {display:none;}
 }
