--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
     font-display: swap;
 }
 
+.keystyle {box-shadow: 1px 1px 0px #999, 2px 2px 0px #999, 3px 3px 0px #999, 4px 4px 0px #999, 5px 5px 0px #999, 6px 6px 0px #999;
+}
+
 .spacebar {    font-size: 1em;
     color: #e8e8e8;
     margin-top: 58px;
