--- a/style.css
+++ b/style.css
@@ -719,5 +719,5 @@ a.links:hover{
   and (max-height: 1366px) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
     a.fixTopRight { width: 72%;}
-      .spacebar {display:none;}
+/*      .spacebar {display:none;} */
 }
