--- a/views/folios.html
+++ b/views/folios.html
@@ -13,7 +13,8 @@
   
 <a class="updatedOn">Updated 25.06.20</a>   
 <span id="folioLinks">
-       <a class="folioLink" href="http://lynnecarty.info/" target="_blank">Lynne Carty</a> 
+       <a class="folioLink" href="https://grindler.design/" target="_blank">Jonah Grindler</a> 
+  <a class="folioLink" href="http://lynnecarty.info/" target="_blank">Lynne Carty</a> 
      <a class="folioLink" href="https://www.elvin-hu.com/" target="_blank">Elvin Hu</a> 
   <a class="folioLink" href="https://catherinebui.com/" target="_blank">Catherine Bui</a> 
    <a class="folioLink" href="http://lebassis.com/" target="_blank">Leandro Assis</a> 
