--- a/views/folios.html
+++ b/views/folios.html
@@ -13,6 +13,10 @@
   
 <a class="updatedOn">Updated 27.06.20</a>   
 <span id="folioLinks">
+  <a class="folioLink" href="https://www.marvinschwaibold.com/" target="_blank">Marvin
+Schwaibold</a> 
+   <a class="folioLink" href="https://grindler.design/" target="_blank">Jonah Grindler</a> 
+   <a class="folioLink" href="https://ayakaito.com/" target="_blank">Ayaka B. Ito</a> 
        <a class="folioLink" href="https://grindler.design/" target="_blank">Jonah Grindler</a> 
   <a class="folioLink" href="http://lynnecarty.info/" target="_blank">Lynne Carty</a> 
      <a class="folioLink" href="https://www.elvin-hu.com/" target="_blank">Elvin Hu</a> 
