--- a/views/folios.html
+++ b/views/folios.html
@@ -11,10 +11,11 @@
 
   
   
-<a class="updatedOn">Updated 27.06.20</a>   
+<a class="updatedOn">Updated 28.06.20</a>   
 <span id="folioLinks">
-  <a class="folioLink" href="https://www.marvinschwaibold.com/" target="_blank">Marvin
-Schwaibold</a> 
+    <a class="folioLink" href="https://jasonyuan.design/" target="_blank">Jason Yuan</a> 
+    <a class="folioLink" href="http://jrands.com/" target="_blank">Justin Rands</a> 
+  <a class="folioLink" href="https://www.marvinschwaibold.com/" target="_blank">Marvin Schwaibold</a> 
    <a class="folioLink" href="https://ayakaito.com/" target="_blank">Ayaka B. Ito</a> 
        <a class="folioLink" href="https://grindler.design/" target="_blank">Jonah Grindler</a> 
   <a class="folioLink" href="http://lynnecarty.info/" target="_blank">Lynne Carty</a> 
