--- a/views/folios.html
+++ b/views/folios.html
@@ -13,6 +13,7 @@
   
 <a class="updatedOn">Updated 28.06.20</a>   
 <span id="folioLinks">
+      <a class="folioLink" href="https://josemeza.info/" target="_blank">José Meza</a> 
     <a class="folioLink" href="https://jasonyuan.design/" target="_blank">Jason Yuan</a> 
     <a class="folioLink" href="http://jrands.com/" target="_blank">Justin Rands</a> 
   <a class="folioLink" href="https://www.marvinschwaibold.com/" target="_blank">Marvin Schwaibold</a> 
