--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ a.fixLeft {
   font-size:32px;
   color: black;
   cursor: help;
+    background-color: rgba(255, 255, 255, 0.9);
 }
 a.fixLeft:hover {
   color: grey;
