--- a/views/folios.html
+++ b/views/folios.html
@@ -11,8 +11,9 @@
 
   
   
-<a class="updatedOn">Updated 02.07.20</a>   
+<a class="updatedOn">Updated 03.07.20</a>   
 <span id="folioLinks">
+     <a class="folioLink" href="https://www.satupelkonen.com/" target="_blank">Satu Pelkonen</a> 
    <a class="folioLink" href="https://jono.fyi/" target="_blank">Jono Brandel</a> 
       <a class="folioLink" href="https://josemeza.info/" target="_blank">José Meza</a> 
     <a class="folioLink" href="https://jasonyuan.design/" target="_blank">Jason Yuan</a> 
