--- a/views/folios.html
+++ b/views/folios.html
@@ -10,13 +10,14 @@
   
   img {
   height: auto;
-  width: 100px;
+  width: 33%;
   display: none;
   position:fixed;
-  top:0;
+  top:32px;
+    left:32px;
 }
 .folioLink:hover img {
-  display: none;
+  display: block;
 }
   
   </style>
