--- a/views/folios.html
+++ b/views/folios.html
@@ -15,9 +15,10 @@
   position:fixed;
   top:32px;
     left:32px;
+    transition: all 1s linear;
 }
 .folioLink:hover img {
-  display: block;
+  display: block;transition: all 1s linear;
 }
   
   </style>
