--- a/views/folios.html
+++ b/views/folios.html
@@ -18,7 +18,7 @@
     transition: all 1s linear;
 }
 .folioLink:hover img {
-  display: block;transition: all 1s linear;
+  display: none;transition: all 1s linear;
 }
   
   </style>
