--- a/views/folios.html
+++ b/views/folios.html
@@ -27,8 +27,9 @@
 
   
   
-<a class="updatedOn">Updated 03.07.20</a>   
+<a class="updatedOn">Updated 05.07.20</a>   
 <span id="folioLinks">
+        <a class="folioLink" href="https://danielolof.se/" target="_blank">Daniel Källbom</a> 
      <a class="folioLink" href="https://www.satupelkonen.com/" target="_blank">Satu Pelkonen<img src="https://66.media.tumblr.com/a489f964074148875d743ba897add5e9/tumblr_osay1btyWQ1twhx56o1_1280.jpg" alt="folio"></a> <a class="folioLink" href="https://jono.fyi/" target="_blank">Jono Brandel</a> 
       <a class="folioLink" href="https://josemeza.info/" target="_blank">José Meza</a> 
     <a class="folioLink" href="https://jasonyuan.design/" target="_blank">Jason Yuan</a> 
