--- a/views/folios.html
+++ b/views/folios.html
@@ -27,8 +27,9 @@
 
   
   
-<a class="updatedOn">Updated 06.07.20</a>   
+<a class="updatedOn">Updated 08.07.20</a>   
 <span id="folioLinks">
+    <a class="folioLink" href="https://www.liangela.com/" target="_blank">Angela Li</a> 
           <a class="folioLink" href="https://joshuasoehn.com/" target="_blank">Joshua Söhn</a> 
         <a class="folioLink" href="https://danielolof.se/" target="_blank">Daniel Källbom</a> 
      <a class="folioLink" href="https://www.satupelkonen.com/" target="_blank">Satu Pelkonen<img src="https://66.media.tumblr.com/a489f964074148875d743ba897add5e9/tumblr_osay1btyWQ1twhx56o1_1280.jpg" alt="folio"></a> <a class="folioLink" href="https://jono.fyi/" target="_blank">Jono Brandel</a> 
