--- a/np2021/style.css
+++ b/np2021/style.css
@@ -642,24 +642,40 @@ a.links:hover{
 }
 @media all and (max-width: 740px) {
 
+  a.folioLink {
+  
+  background: none!important;
 
-  #portfolios {float: right;margin-left: 40%;   font-size: calc(2em + 1vw);margin-top: 0px!important;}
+}
+a.folioLink:hover {
+
+  background:none!important;
+}
+
+
+  #portfolios {float: right;margin-left: 40%;   font-size: calc(3.2em + 1vw);
+    line-height: 1.2;margin-top: 0px!important;display: block!important;background-color: none;}
 
 
   body {margin-top:0!important;margin-left:8px!important;padding: 0;}
 
 
-  .folioThumb {display: inline-block!important;position: relative!important; height: auto;height: calc(1.2em + .75vw)!important;width: auto!important;
-
-
-
-      border-radius: 2px!important;  box-shadow:none!important;border: 1px solid #ececec;
-  height: auto;
- 
-  top:4px!important;
-    left:8px!important;
+  .folioThumb {
+display: block!important;
+    position: relative!important;
+    height: auto;
+    height: 100%!important;
+    width: 96vw!important;
+    border-radius: 2px!important;
+    box-shadow: none!important;
+    border: 1px solid #ececec;
+    height: auto;
+    top: 4px!important;
+    left: 0px!important;
     margin-right: 16px!important;
     transition: all 0s linear!important;
+    margin-bottom: 32px;
+    margin-top:16px;
 
   }
 
