--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+
+img {
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+img[data-src] {
+  opacity: 0;
+}
+
 @font-face {
     font-family: 'Visuelt';
     src: url('Visuelt-Regular.woff2') format('woff2'),
